--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,4 +1,5 @@
 @import '../../vendor/filament/filament/resources/css/theme.css';
+@import "../../vendor/tempest/highlight/src/Themes/highlight-light-lite.css";
 
 .filament-syntax-entry-component .grid {
     @apply block;
